# stock-yard

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.txt  compose.yaml  pyproject.toml
app/: main.py
app/api/routers/: analytics.py  chat.py  health.py  market.py  tickers.py
app/core/: config.py  dependencies.py  errors.py
app/db/: sqlite.py
app/providers/llm/: base.py  gemini_provider.py  openai_compat_provider.py
app/repositories/: analytics_repository.py
app/schemas/: analytics.py  chat.py  common.py  market.py  ticker.py
app/services/: analytics_service.py  chat_service.py  yfinance_service.py
app/utils/: cache.py  mappers.py  rate_limit.py  symbols.py
docs/: api-docs.md  specs.md
tests/: test_chat_service.py  test_openai_compat_provider.py  test_utils_mappers.py  test_yfinance_service.py
