[project]
name = "stock-insight-backend"
version = "0.1.0"
description = "Backend-first stock exploration and AI Q&A app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.6,<1.0.0",
  "pydantic-settings>=2.7.1,<3.0.0",
  "uvicorn[standard]>=0.32.1,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
